[package]
name = "h2o"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "h2o"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive", "cargo"] }
core = { path = "../core" }
