[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "h2o"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive", "cargo"] }
core = { path = "../core" }

[build-dependencies]
clap = { version = "4.5.0", features = ["derive", "cargo"] }
clap_complete = "4.5.1"
